syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "proto/reservation";

service ReservationService {
  rpc GetReservationsByUserId(GetUserReservationsRequest) returns (GetUserReservationsResponse) {}
}

message Reservation {
  string id = 1;
//  enum Category {
//    CLOTHES = 0;
//    ELECTRONICS = 1;
//    BOOKS = 2;
//  };
  int32 numberOfGuests = 2;
  google.protobuf.Timestamp startDate = 3;
  google.protobuf.Timestamp endDate = 4;
  string userID = 5;
  string accommodationID = 6;
}

message GetUserReservationsRequest {
  string id = 1;
}

message GetUserReservationsResponse {
  repeated Reservation reservations = 1;
}
